Update `.gitignore` to exclude `jwk.json` files in all directories and `authservice/target`